@@ -5,8 +5,8 @@ plugins {
     id 'io.github.0ffz.github-packages' version '1.2.1'
 }
 
-sourceCompatibility = "17"
-targetCompatibility = "17"
+sourceCompatibility = "19"
+targetCompatibility = "19"
 
 //compileKotlin {
 //	kotlinOptions {
@@ -18,6 +18,17 @@ targetCompatibility = "17"
 //		jvmTarget = '17'
 //	}
 //}
+
+compileJava {
+    options.compilerArgs.addAll(['--release', '19']) 
+    options.compilerArgs.addAll(['--enable-preview'])
+    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
+}
+
+application {
+    applicationDefaultJvmArgs = ['--enable-preview', 
+                                 '--add-modules', 'jdk.incubator.concurrent']
+}
 
 mainClassName = 'com.rs.Launcher'
 
@@ -32,7 +43,7 @@ version '1.1.11'
 
 dependencies {
 	//implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-	implementation group: 'rs.darkan', name: 'core', version: '1.1.13'
+	implementation group: 'rs.darkan', name: 'core', version: '1.1.14'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
 	implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.4.0'
